:recycle: Removed unnecessary code

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <link href="dist/img/favicon.png" type="image/png" rel="icon">
     
   </head>
-  <body class="start">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
